# ableton-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
compositions/: CLAUDE.md  deep-drift-dm.md  deep-drift-dm.yaml  first-song-am.md
docs/: CONCEPT.md
lib/: analyze.py  capture.py  cli.py  export_session.py  link.py  midi_engine.py  monitor.py  osc.py  procedures.py  query_session.py  render.py  song.py  templates.py
midi/: arp.sh  chord.sh  hihat.sh  kick.sh
scripts/: add_fx.py  arrange_sections.py  build-energy.sh  fire-sequence.sh  random-clips.sh
