[project]
name = "ableton-cli"
version = "0.1.0"
description = "CLI-based music composition with Ableton Live — tempo sync, remote control, audio capture, AI analysis"
requires-python = ">=3.12"
dependencies = [
    "python-osc>=1.8.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
render = ["pedalboard>=0.9", "soundfile>=0.12"]

[project.scripts]
ableton-cli = "lib.cli:main"

[tool.setuptools.packages.find]
include = ["lib*"]
